demo.yml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: demo
  labels:
    app: demo
    scope: meetup
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo
      scope: meetup
  template:
    metadata:
      labels:
        app: demo
        scope: meetup
    spec:
      containers:
      - name: demo
        resources:
          requests:
            cpu: "5m"
          limits:
            cpu: "120m"
        image: notuscloud/demo-meetup-docker-pod
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: demo
  labels:
    app: demo
    scope: meetup
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 31760
  selector:
    app: demo
    scope: meetup
